--- a/Biblioteca API/Biblioteca API.csproj
+++ b/Biblioteca API/Biblioteca API.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="16.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Middleware\" />
+    <Folder Include="NewFolder\" />
     <Folder Include="Servicios\" />
   </ItemGroup>
 
