especificar que metodos GET devuelven tipo de respuesta 200 OK en swagger

--- a/Biblioteca API/Biblioteca API.csproj
+++ b/Biblioteca API/Biblioteca API.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Middleware\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\autores\" />
   </ItemGroup>
 
 </Project>
