agregar string de connection de redis

--- a/Biblioteca API/appsettings.Development.json
+++ b/Biblioteca API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-81BRS62;Database=WebAPIBibliotecaDB;Integrated Security=True;TrustServerCertificate=True"
+        "DefaultConnection": "Server=DESKTOP-81BRS62;Database=WebAPIBibliotecaDB;Integrated Security=True;TrustServerCertificate=True",
+        "Redis": ""
     },
     "Logging": {
         "LogLevel": {
