agregar RedisOutputCache en area de servicios

--- a/Biblioteca API/appsettings.Development.json
+++ b/Biblioteca API/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
         "DefaultConnection": "Server=DESKTOP-81BRS62;Database=WebAPIBibliotecaDB;Integrated Security=True;TrustServerCertificate=True",
-        "Redis": ""
+        "Redis": "redis-11758.c251.east-us-mz.azure.cloud.redislabs.com:11758,password=Q0lmmLYNrdConZCukagwvVYj85i4nwin"
     },
     "Logging": {
         "LogLevel": {
