agregar referencia a webapi

--- a/BibliotecaAPITests/BibliotecaAPITests.csproj
+++ b/BibliotecaAPITests/BibliotecaAPITests.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Biblioteca API\Biblioteca API.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
