arreglar nombre de variable opciones

--- a/BibliotecaAPITests/BibliotecaAPITests.csproj
+++ b/BibliotecaAPITests/BibliotecaAPITests.csproj
@@ -21,4 +21,8 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PruebasUnitarias\Controllers\V1\" />
+  </ItemGroup>
+
 </Project>
