--- a/BibliotecaAPITests/BibliotecaAPITests.csproj
+++ b/BibliotecaAPITests/BibliotecaAPITests.csproj
@@ -5,6 +5,7 @@
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<EnableStaticWebAssets>false</EnableStaticWebAssets>
   </PropertyGroup>
 
   <ItemGroup>
